infrastructur-aws/vcluster-setup/vcluster-admin-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: v-dev-ing
  namespace: development
spec:
  ingressClassName: nginx
  rules:
  - host: de.v-dev.thinkport.digital
    http:
      paths:
      - backend:
          service:
            name: v-dev
            port:
              number: 443
        path: /
        pathType: ImplementationSpecific
